--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="button_sections">
                     <center>
-                        <button id="active">I'am new to the industry</button>
+                        <form action=""> <button id="active">I'am new to the industry</button></form>
                         <button>I need industry experience</button>
                     </center>
                 </div>
