--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 </div>
                 <div class="button_sections">
                     <center>
-                        <form action=""> <button id="active">I'am new to the industry</button></form>
-                        <button>I need industry experience</button>
+                        <form action="./training.zuri/index.html"> <button id="active">I'am new to the industry</button></form>
+                        <form action="./talent.zuri/talent.html"> <button>I need industry experience</button> </form>
                     </center>
                 </div>
             </div>
