--- a/index.html
+++ b/index.html
@@ -40,8 +40,16 @@
                 </div>
                 <div class="button_sections">
                     <center>
-                        <form action="training.zuri/index.html"> <button id="active">I'am new to the industry</button></form>
-                        <form action="talent.zuri/talent.html"> <button>I need industry experience</button> </form>
+                        <div class="button1"><form action="training.zuri/index.html"> <button id="active">I'am new to the industry</button></form></button>
+                        <div class="button2"><form action="talent.zuri/talent.html"> <button>I need industry experience</button> </form></button>
+                        <style>
+                            .button1{
+                               float:left;
+                            }
+                            .button2{
+                                float:right;    
+                            }
+                        </style>
                     </center>
                 </div>
             </div>
