--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <span>that can help your company achieve their mission-critical projects and goals</span>
                     </center>
                 </div>
-                <div class="button_sections">
+                <div class="button_sections" style="background-color:red;">
                     <center>
                         <div class="button1"><form action="training.zuri/index.html"> <button id="active">I'am new to the industry</button></form></button>
                         <div class="button2"><form action="talent.zuri/talent.html"> <button>I need industry experience</button> </form></button>
