--- a/index.html
+++ b/index.html
@@ -40,14 +40,16 @@
                 </div>
                 <div class="button_sections" style="background-color:red;width:1000px;">
                     <center>
-                        <div class="button1"><form action="training.zuri/index.html"> <button id="active">I'am new to the industry</button></form></button>
-                        <div class="button2"><form action="talent.zuri/talent.html"> <button>I need industry experience</button> </form></button>
+                        <div class="brow">
+                            <div class="columnb">
+                                <div class="button1"><form action="training.zuri/index.html"> <button id="active">I'am new to the industry</button></form></button>
+                                <div class="button2"><form action="talent.zuri/talent.html"> <button>I need industry experience</button> </form></button>
+                            </div>
+                        </div>
                         <style>
-                            .button1{
-                               float:left;
-                            }
-                            .button2{
-                                float:right;    
+                            .columnb{
+                                float:left;
+                                width:300px;
                             }
                         </style>
                     </center>
