--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
                         <div class="brow">
                             <div class="columnb">
                                 <div class="button1"><form action="training.zuri/index.html"> <button id="active">I'am new to the industry</button></form></button>
+                            </div>
+                            <div class="columnb">
                                 <div class="button2"><form action="talent.zuri/talent.html"> <button>I need industry experience</button> </form></button>
                             </div>
                         </div>
