--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <span>that can help your company achieve their mission-critical projects and goals</span>
                     </center>
                 </div>
-                <div class="button_sections" style="background-color:red;width:1000px;">
+                <div class="button_sections">
                     <center>
                         <div class="brow">
                             <div class="columnb">
@@ -51,7 +51,10 @@
                         <style>
                             .columnb{
                                 float:left;
+                                margin:10px;
                                 width:300px;
+                                height:200px;
+                                baclground-color:red;
                             }
                         </style>
                     </center>
