--- a/index.html
+++ b/index.html
@@ -40,14 +40,8 @@
                 </div>
                 <div class="button_sections">
                     <center>
-                        <div class="brow">
-                            <div class="columnb">
-                                <div class="button1"><form action="training.zuri/index.html"> <button id="active">I'am new to the industry</button></form></button>
-                            </div>
-                            <div class="columnb">
-                                <div class="button2"><form action="talent.zuri/talent.html"> <button>I need industry experience</button> </form></button>
-                            </div>
-                        </div>
+                        <a href="training.zuri/index.html">I'am new to the industry</a>
+                        <a href="talent.zuri/talent.html">I need industry experience</a>
                         <style>
                             .columnb{
                                 float:left;
