--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="button_sections">
                     <center>
-                        <a href="training.zuri/index.html">I'am new to the industry</a>
+<!--                         <a href="training.zuri/index.html">I'am new to the industry</a>
                         <a href="talent.zuri/talent.html">I need industry experience</a>
                         <style>
                             .columnb{
@@ -50,7 +50,7 @@
                                 height:200px;
                                 baclground-color:red;
                             }
-                        </style>
+                        </style> -->
                     </center>
                 </div>
             </div>
