--- a/index.html
+++ b/index.html
@@ -40,17 +40,20 @@
                 </div>
                 <div class="button_sections">
                     <center>
-<!--                         <a href="training.zuri/index.html">I'am new to the industry</a>
+                        <a href="training.zuri/index.html">I'am new to the industry</a>
                         <a href="talent.zuri/talent.html">I need industry experience</a>
                         <style>
-                            .columnb{
-                                float:left;
-                                margin:10px;
-                                width:600px;
-                                height:200px;
-                                baclground-color:red;
+                            .button_sections{
+                                padding:15px;
                             }
-                        </style> -->
+                            .button_sections a{
+                                padding:15px;
+                                border:1 px solid red;
+                                text-decoration:none;
+                                color:black;
+                                background:tomato;
+                            }
+                        </style>
                     </center>
                 </div>
             </div>
