--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="button_sections">
                     <center>
                         <a href="training.zuri/index.html">I'am new to the industry</a>
-                        <a href="talent.zuri/talent.html">I need industry experience</a>
+                        <a href="talent.zuri/talent.html" class="activite">I need industry experience</a>
                         <style>
                             .button_sections{
                                 padding:15px;
@@ -53,6 +53,10 @@
                                 color:black;
                                 background:tomato;
                             }
+                            .activite{
+                                 border:1 px solid red;
+                                background-color:white;
+                                color:tomato;
                         </style>
                     </center>
                 </div>
