--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <a href="talent.zuri/talent.html" class="activite">I need industry experience</a>
                         <style>
                             .button_sections{
-                                padding:15px;
+                                padding-top:50px;
                             }
                             .button_sections a{
                                 padding:15px;
