--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
                                 color:black;
                                 background:tomato;
                             }
+                            .button_sections a:hover{
+                                animation: opacity 1s;   
+                            }
+                            @Keyframes opacity{
+                                from{
+                                    opacity:0;
+                                }
+                            }
                             .button_sections #activite{
                                  border:1 px solid red;
                                 background-color:white;
