--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             }
                             .button_sections a{
                                 padding:15px;
-                                border:1 px solid red;
+                                border:1px solid red;
                                 text-decoration:none;
                                 color:black;
                                 background:tomato;
@@ -62,9 +62,13 @@
                                 }
                             }
                             .button_sections #activite{
-                                 border:1 px solid red;
+                                 border:1px solid red;
                                 background-color:white;
                                 color:tomato;
+                            }
+                            .button_sections #activite:hover{
+                                background-color:tomato;
+                                color:white;
                             }
                         </style>
                     </center>
