--- a/index.html
+++ b/index.html
@@ -62,13 +62,14 @@
                                 }
                             }
                             .button_sections #activite{
-                                 border:1px solid red;
-                                background-color:white;
+                                border:2px solid tomato;
+                                background-color:transparent;
                                 color:tomato;
                             }
                             .button_sections #activite:hover{
                                 background-color:tomato;
                                 color:white;
+                                animation: opacity 1s;   
                             }
                         </style>
                     </center>
