--- a/talent.zuri/talent.html
+++ b/talent.zuri/talent.html
@@ -12,8 +12,7 @@
     <main>
     <div class="desktop-view">
         <header class="header">
-           <nav class="header-n
-           v"> 
+           <nav class="header-nv"> 
         
             <div class="img-div">
                 <img src="logo2.svg" alt="Zuri">
